--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "postcss": "^8.4.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "react-spinners": "^0.13.4",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
